<resources>
    <!--<string name="app_name">Current GPS Loc</string>-->
    <string name="email_required">Email is required</string>
    <string name="email_valid">Please enter valid email</string>
    <string name="password_required">Password is Required</string>
    <string name="password_invalid">Minimum 6 character is required</string>
    <string name="name_required">Name is required</string>

    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">REGISTER</string>
    <string name="login">LOGIN</string>

    <string name="logout">Logout</string>


    <string name="app_name">"Assignment "</string>
    <string name="action_settings">Settings</string>
    <string name="item_title">Palais Garnier</string><string name="item_desc">The Palais Garnier which locates in Paris was built from 1861 for
        the Paris Opera.
    </string><string name="detail_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
        nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
        irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
        deserunt mollit anim id est laborum.
    </string>
    <string name="detail_location">"8 Rue Scribe, 75009 Paris, France"</string>
</resources>
