<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_vertical"
              android:orientation="vertical"
              android:padding="20dp">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_launcher_large"/>

    <com.gobinda.assignment.widgets.FloatLabelLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:floatLabelTextAppearance="@style/TextAppearance.CGPSLocation.FloatLabel">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:imeOptions="actionNext"
            android:inputType="textPersonName|textCapWords"
            android:maxLength="255"/>
    </com.gobinda.assignment.widgets.FloatLabelLayout>

    <com.gobinda.assignment.widgets.FloatLabelLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:floatLabelTextAppearance="@style/TextAppearance.CGPSLocation.FloatLabel">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:maxLength="50"/>
    </com.gobinda.assignment.widgets.FloatLabelLayout>

    <com.gobinda.assignment.widgets.FloatLabelLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:floatLabelTextAppearance="@style/TextAppearance.CGPSLocation.FloatLabel">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword|text"
            android:maxLength="50"/>
    </com.gobinda.assignment.widgets.FloatLabelLayout>


    <Button
        android:id="@+id/sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_selector"
        android:text="@string/register"
        android:textColor="@drawable/button_text_color"
        android:textSize="18sp"
        />

    <Button
        android:id="@+id/switch_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_selector"
        android:text="@string/login"
        android:textColor="@drawable/button_text_color"
        android:textSize="18sp"
        />


</LinearLayout>